fix overflow on tickets when given long description

--- a/app/globals.css
+++ b/app/globals.css
@@ -131,7 +131,7 @@ body {
     width: clamp(80%, 80%, 1200px);
     margin-inline: auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
 }
 
